Attempt to reduce memory usage in Docker
Signed-off-by: William Brawner <me@wbrawner.com>